--- a/WhatsForDinner/app/src/main/AndroidManifest.xml
+++ b/WhatsForDinner/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="edu.sjsu.ajay.whatsfordinner">
 
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"></uses-permission>
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -20,7 +21,8 @@
         <activity android:name=".MealsActivity" />
         <activity android:name=".RecipeActivity" />
         <activity android:name=".GroceryActivity" />
-        <activity android:name=".NewDishActivity"></activity>
+        <activity android:name=".NewDishActivity" />
+        <activity android:name=".NutritionActivity"></activity>
     </application>
 
 </manifest>
