--- a/WhatsForDinner/app/src/main/AndroidManifest.xml
+++ b/WhatsForDinner/app/src/main/AndroidManifest.xml
@@ -10,14 +10,14 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".HomeActivity">
+        <activity android:name=".HomeActivity" android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".PopUp" />
+        <activity android:name=".PopUp" android:screenOrientation="portrait"/>
         <activity android:name=".MealsActivity" />
         <activity android:name=".RecipeActivity" />
         <activity android:name=".GroceryActivity" />
